fix mobile overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,8 @@
   }
 }
 
+body {
+  overflow-x: hidden;
+}
+
+
